syntax="proto3";

package search.v1;
option go_package="search/v1;searchv1";

service SyncService {
  rpc InputUser(InputUserRequest)returns(InputUserResponse);
  rpc InputArticle(InputArticleRequest)returns(InputArticleResponse);
}

message InputUserRequest {
  User user = 1;
}

message InputUserResponse {

}


message InputArticleRequest {
  Article article = 1;
}

message InputArticleResponse {

}

message User {
  int64 id = 1;
  string nickname = 2;
  string email = 3;
  string phone = 4;
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int32 status = 4;
}